# bcx

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: dependencies.cmake
schema/: gql.gql
src/: CMakeLists.txt  bcx.cpp  types.hpp
src/db/: CMakeLists.txt  db.cpp  db.hpp
src/ds/: CMakeLists.txt  ds.cpp  ds.hpp
src/format/: CMakeLists.txt  format.cpp  format.hpp
src/gql/: CMakeLists.txt  account.cpp  block.cpp  domain.cpp  impl.hpp  peer.cpp  query.cpp  role.cpp  schema.hpp  service.cpp  service.hpp  transaction.cpp
src/server/: CMakeLists.txt  server.cpp  server.hpp
src/sync/: CMakeLists.txt  sync.cpp  sync.hpp
vcpkg/: VCPKG_DEPS_LIST
vcpkg/ports/belle/: CONTROL  portfile.cmake
vcpkg/ports/iroha-ed25519/: 0001-Add-check-for-amd64-64-24k-pic-target.patch  portfile.cmake
